# glecs_godot_plugin

./: .gitignore  .gitmodules  .gut_editor_config.json  .gutconfig.json  README.md  components.gd  glecs.gdextension  icon.png.import  icon.svg.import  main.gd  main.tscn  plugin.cfg  project.godot  run_test_suite.gd  singleton.tscn  super_ecgds.gdextension
.github/workflows/: unittests.yml
.godot/: extension_list.cfg  global_script_class_cache.cfg
addons/glecs/: _build_for_nightly.gd  _build_for_nightly.py  glecs.gdextension  glecs.gdextension.release  plugin.cfg  plugin.gd
addons/glecs/cpp/: SConstruct
addons/glecs/gd/: component.gd  entity.gd  glecs.gd  module.gd  system_builder.gd  world.gd  world_node.gd  world_node_singleton.gd  world_obj.gd  world_object.gd
addons/glecs/rust/glecs/: Cargo.toml
addons/glecs/rust/glecs/src/: component.rs  component_definitions.rs  entity.rs  event.rs  gd_bindings.rs  lib.rs  module.rs  prefab.rs  queries.rs  util.rs  world.rs
addons/glecs2/: glecs.gdextension  plugin.cfg
addons/glecs2/gd/: world.gd
addons/gut/: gut_cmdln.gd
addons/gut/gui/: GutSceneTheme.tres
components/: a_component.gd  a_entity.gd  a_module.gd  b_module.gd  dictionary.gd  script_of_components.gd
example/asteroids/: asteroids.gd  asteroids.tscn
examples/asteroids/: asteroids.gd  asteroids.tscn
gd/: component.gd  component_access.gd  glecs.gd  world_node.gd  world_node_singleton.gd  world_object.gd
glecs/: plugin.gd
rust/godot_entities_ecs/: Cargo.toml
scripts/: install_dependencies_linux.sh
src/: component.gd  component_access.gd  system_builder.gd  world.gd
unittests/: test_components.gd  test_default_component_values.gd  test_ecs_world.gd  test_entities.gd  test_errors.gd  test_events.gd  test_prefab.gd  test_queries.gd  test_registration.gd  test_relations.gd  test_simple_systems.gd  test_systems.gd  test_test.gd
(+30 files in other folders)
